finished creating indicator credit assignment. Fixed hypervolume WFG code